<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pochih.mokapos.fragment.ShoppingFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_title"
                android:gravity="center"
                android:text="@string/text_Shopping_Cart"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_fragment"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnClearSale"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/llSubtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_item_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="50"
                        android:gravity="start"
                        android:text="@string/text_Subtotal"
                        android:textColor="#445462"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvSubtotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:textColor="#445462"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_item_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="50"
                        android:gravity="start"
                        android:text="@string/text_Discount"
                        android:textColor="#445462"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvDiscount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:textColor="#445462"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvNoItems"
            android:layout_width="0dp"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlTitle"
            android:text="@string/text_No_Items" />

        <Button
            android:id="@+id/btnClearSale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_clear_sale"
            android:padding="20dp"
            android:text="@string/text_Clear_Sale"
            android:textColor="#FFF"
            app:layout_constraintBottom_toTopOf="@id/btnCharge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnCharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_charge"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
